# aero2solver

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: docker.yml  test_ci.yml
examples/: get-test-data.rs  test.rs
model/: captcha.cfg  captcha.names
src/: constants.rs  lib.rs  main.rs  portal.rs  solver.rs
tests/: offline_solve.rs
