[package]
name = "aero2solver"
description = "Solve Aero2 captchas automatically"
authors = ["nezu <nezu@nezu.cc>"]
version = "1.0.0"
edition = "2021"

[dependencies]
darknet = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
tl = "0.7"
image = "0.24"
clap = { version = "4.4.7", features = ["derive", "string", "env"] }